Added shared preferences for each check box